# skill

./: .gitignore  AGENTS.md
.opencode/skills/: bid-doc-master  company-intro-generator  competitor-product-analyzer  compound-learning  crela-daily-skill  doc-generator  docs-archive-manager  frontend-slides  material-importer  mckinsey-pptx  ops-manual-generator  pdf-toc-master  ppt-master  product-prd-generator  project-proposal-generator  strategy-brief-generator  winshang-crawler  word-master
.trae/rules/: project_rules.md
config/: lanlnk.yaml
openspec/changes/extend-content-operations-case-product/: verification-report.md
openspec/specs/app-discovery/: spec.md
openspec/specs/content-operations-skill/: spec.md
openspec/specs/doc-generator/: spec.md
openspec/specs/manual-rendering/: spec.md
openspec/specs/screenshot-capture/: spec.md
references/: skill-审计-2026-07.md
references/docspec/: DocSpec-通用文档质量规范.md  PPT与Word内容包质量规范.md  PRD质量规范.md  README.md  SKILL-frontmatter规范.md  Skill写作质量规范.md  复利工程迭代机制.md  手册与知识库文档质量规范.md  文档类Skill适配规范.md  文档验收清单.md  方案与投标文档质量规范.md
references/scripts/: check_docs_consistency.sh  check_skill_ecosystem.sh  pre-commit.sh  setup_skill_symlinks.sh
skills/bidding/bid-doc-master/: SKILL.md  bid-doc-master  pyproject.toml
skills/business/bid-doc-master/: SKILL.md  pyproject.toml
skills/business/bid-doc-master/references/: case-example.md  troubleshooting.md
skills/business/bid-doc-master/scripts/: pricing_compiler.py
skills/business/bid-doc-master/src/: __init__.py  generator.py  main.py  models.py  reader.py
skills/business/case-operations/: SKILL.md  pyproject.toml
skills/business/case-operations/fixtures/: synthetic-fixture.json
skills/business/case-operations/references/: contract-notes.md
skills/business/case-operations/scripts/: __init__.py  content_ops_loader.py  content_ops_loader.pyi  synthetic_runner.py  validate.py
skills/business/case-operations/tests/: __init__.py  mock_mcp_server.py  test_case_operations.py  test_shared_parser.py  test_synthetic_runner.py  test_validation.py
skills/business/comment-moderation/: SKILL.md
skills/business/company-intro-generator/: SKILL.md
skills/business/competitor-product-analyzer/: SKILL.md
skills/business/content-operations/: SKILL.md  pyproject.toml
skills/business/content-operations/references/: article-payload-v1.md  runtime-artifacts-v1.md  troubleshooting.md
skills/business/content-operations/scripts/: __init__.py  article_payload.py  case_payload.py  cms_client.py  contracts.py  import_artifacts.py  import_draft.py  markdown_to_html.py  product_payload.py  validate_article.py  validate_case.py  validate_product.py  write_receipt.py
skills/business/content-operations/templates/v1/: article.json  case.json  import-receipt.json  pattern-draft.md  product.json  research-pack.md  review-record.json  validation-report.json
skills/business/content-operations/tests/: test_content_operations.py
skills/business/geo-operations/: SKILL.md
skills/business/lead-operations/: SKILL.md
skills/business/material-importer/: SKILL.md  pyproject.toml
skills/business/material-importer/references/: domain-tags.md  gap-analysis.md  quality-standards.md
skills/business/material-importer/scripts/: add_frontmatter.py  batch_competitor_import.py  case_matcher.py  check_cert.py  convert_excel.py  datadict_to_features.py  extract_images.py  fix_frontmatter.py  link_images.py  ocr_extract.py  ocr_to_features.py  scan_raw_index.py  validate_material.py
skills/business/material-importer/tests/: test_fix_frontmatter.py
skills/business/pricing-generator/: SKILL.md  generate_quote.py  pyproject.toml
skills/business/product-operations/: SKILL.md
skills/business/product-prd-generator/: SKILL.md  pyproject.toml
skills/business/product-prd-generator/product_prd_generator/: _paths.py  code_map.py  coverage_validate.py  data_model.py  doc_map.py  main.py  models.py  reconcile.py  render.py  review.py  review_format.py  word_export.py
skills/business/product-prd-generator/references/: code-map-rules-LnkChatBI.yaml  code-map-rules-langchat.yaml  code-map-rules-商管系统.yaml  coverage-validate-mode.md  feature-taxonomy.md  prd-template.md  reconciliation-schema.json  review-template.md  rollout-plan-template.md  term-aliases.yaml  troubleshooting.md
skills/business/product-prd-generator/scripts/: extract_code_map.py  extract_doc_map.py  reconcile_capabilities.py  render_prd.py
skills/business/product-prd-generator/tests/: test_code_map_rules.py  test_integration_e2e.py  test_paths.py
skills/business/project-proposal-generator/: SKILL.md
skills/business/redirect-audit/: SKILL.md
skills/business/requirement-evaluator/: SKILL.md
skills/business/seo-audit/: SKILL.md
skills/business/site-health-operations/: SKILL.md
skills/business/strategy-brief-generator/: SKILL.md
skills/crawler/winshang-crawler/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
skills/crawler/winshang-crawler/src/crawler/: cli.py  service.py  winshang_client.py
skills/daily/crela-daily-skill/: SKILL.md
skills/docs/doc-generator/: README.md  SKILL.md  pyproject.toml
skills/docs/doc-generator/examples/: analysis.example.json  manifest.example.json  style-fingerprint.example.json
skills/docs/doc-generator/references/: analysis-schema.md  chunks-jsonl-schema.md  config-yaml-schema.md  limitations.md  llms-txt-format.md  manual-template.md  screenshot-plan-schema.md  style-fingerprint.md  troubleshooting.md
skills/docs/doc-generator/scripts/: render_manual.py  test_render_manual.py
skills/docs/ops-manual-generator/: SKILL.md
skills/meta/compound-learning/: SKILL.md
skills/meta/docs-archive-manager/: SKILL.md
skills/meta/openspec-practice/: SKILL.md  pyproject.toml
skills/pdf/pdf-toc-master/: SKILL.md  pdf-toc-master  pyproject.toml
skills/pdf/pdf-toc-master/assets/: prompt-template.md
skills/pdf/pdf-toc-master/reference/: ocr-comparison.md  ocr-pipeline.py  workflow.md
skills/pdf/pdf-toc-master/src/pdf_toc/: extract.py
skills/ppt/frontend-slides/: SKILL.md
(+85 files in other folders)
