[project]
name = "bid-doc-tools"
version = "1.0.0"
description = "Dependency declarations for bid-doc-master skill (no library code)"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "markitdown>=0.1.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

