[project]
name = "content-operations"
version = "1.0.0"
description = "Deterministic, draft-only content operations for lnkwebsite"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.7,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.10"
include = ["scripts", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
reportAny = "none"
reportImplicitOverride = "none"
reportUnusedCallResult = "none"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "CPY001", "D203", "D213", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "D", "PLR2004", "S101", "S105", "S106", "SLF001"]
"scripts/**/*.py" = ["T201"]
"scripts/import_artifacts.py" = ["EM101", "TRY003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
