[project]
name = "material-importer"
version = "0.2.0"
description = "素材导入与结构化工具 - 文档转换、图片提取、证照OCR"
requires-python = ">=3.10"
dependencies = [
    "markitdown[all]>=0.1.1",
    "python-pptx>=0.6.23",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
]