[project]
name = "winshang-crawler-skill"
version = "1.0.0"
description = "赢商大数据爬虫 — Self-contained skill for crawling commercial real-estate data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright==1.54.0",
    "pandas==2.3.2",
    "openpyxl==3.1.5",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
